# sgcc-home-assistant-bridg

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCS.md  Dockerfile-for-github-action  Dockerfile.browser  NOTICE  README.md  SECURITY.md  config.yaml  docker-compose.yml  example.env  pyproject.toml  repository.yaml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
assets/: README.md
docs/: development.md  entity-identity-migration.md  release.md  state-grid-lovelace-migration.md
examples/: README.md  lovelace-sgcc-electricity.yaml
ha_addons_doc/: Add-on教程.md
scripts/: README.md  _compat.py  browser-service-entrypoint.sh  browser.py  browser_service.py  cache_validity.py  captcha_selenium.py  click_captcha_solver.py  config.py  const.py  data_fetcher.py  docker-entrypoint.sh  error_watcher.py  ha_mapping.py  llm_config.py  login.py  login_guard.py  main.py  model.py  mqtt_publisher.py  notify.py  parser.py  redact.py  scraper.py  sensor_updator.py  session.py  store.py  test_mqtt_publisher.py  test_store.py  vue_state.py
sgcc_ha_bridge/: browser.py  browser_service.py  cache_validity.py  captcha_selenium.py  click_captcha_solver.py  config.py  const.py  data_fetcher.py  diag.py  entity_identity.py  error_watcher.py  extractor.py  field_contracts.py  ha_mapping.py  llm_config.py  login.py  login_guard.py  login_interaction.py  main.py  money_candidates.py  money_diag.py  mqtt_publisher.py  network_capture.py  notify.py  observation.py  parser.py  redact.py  scraper.py  sensor_updator.py  session.py  store.py  vue_state.py
tests/: conftest.py  (+28 more)
(+14 files in other folders)
