[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sgcc-home-assistant-bridge"
version = "0.1.8"
description = "State Grid / SGCC electricity bridge for Home Assistant"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dynamic = ["dependencies"]

[project.scripts]
sgcc-ha-bridge = "sgcc_ha_bridge.main:main"
sgcc-browser-service = "sgcc_ha_bridge.browser_service:main"

[tool.setuptools.packages.find]
include = ["sgcc_ha_bridge*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
